# Flow-browser-fd-x

./: README.md  pubspec.yaml
backup/flutter_app/: build_log.txt  build_log_windows.txt  pubspec.yaml
backup/flutter_app/docs/: supabase_migrations.md
backup/flutter_app/lib/providers/: settings_provider.dart
backup/flutter_app/lib/screens/: browser_screen.dart
backup/flutter_app/lib/widgets/: auth_modal.dart  browser_tabs.dart  browser_webview.dart  browser_webview.dart.bak  mobile_bottom_nav.dart  note_editor.dart  notes_panel.dart  settings_modal.dart  todos_panel.dart
backup/flutter_app/macos/Flutter/: GeneratedPluginRegistrant.swift
backup/flutter_app/supabase_migrations/: 002_create_sessions_tabs_bookmarks.sql
backup/flutter_app/test/: widget_test.dart
backup/flutter_app/windows/flutter/: generated_plugin_registrant.cc
cpp/: CMakeLists.txt  README.md
cpp/config/: supabase_config.json
cpp/src/: AuthManager.cpp  AuthManager.h  BookmarksConflictDialog.cpp  BookmarksConflictDialog.h  BookmarksManager.cpp  BookmarksManager.h  BookmarksPanel.cpp  BookmarksPanel.h  HistoryManager.cpp  HistoryManager.h  HistoryPanel.cpp  HistoryPanel.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  NotesConflictDialog.cpp  NotesConflictDialog.h  NotesManager.cpp  NotesManager.h  NotesPanel.cpp  NotesPanel.h  SessionManager.cpp  SessionManager.h  Toast.cpp  Toast.h  TodosConflictDialog.cpp  TodosConflictDialog.h  TodosManager.cpp  TodosManager.h  TodosPanel.cpp  TodosPanel.h  WorkspaceManager.cpp  WorkspaceManager.h
docs/: CHANGELOG.md  engine-choice.md  feature-audit.md  parity-checklist.md  troubleshooting_pub_get.md  windows_webview_setup.md
lib/: main.dart
lib/providers/: browser_provider.dart  settings_provider.dart
lib/screens/: browser_screen.dart
lib/utils/: constants.dart
lib/widgets/: ai_assistant_panel.dart  bookmarks_panel.dart  browser_header.dart  browser_tabs.dart  browser_webview.dart  history_panel.dart  notes_panel.dart  performance_page.dart  settings_modal.dart  source_viewer_dialog.dart  todo_editor.dart  workspaces_modal.dart
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
scripts/: clean_windows_project.ps1
supabase_migrations/: 001_create_history_notes_todos.sql
test/: bookmarks_manager_test.cpp  devtools_test.cpp  history_search_test.cpp  incognito_test.cpp  notes_conflict_test.cpp  notes_manager_test.cpp  notes_manager_undo_test.cpp  todos_conflict_test.cpp  todos_manager_test.cpp  todos_manager_undo_test.cpp
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
